--- a/pom.xml
+++ b/pom.xml
@@ -74,6 +74,11 @@
                     </execution>
                 </executions>
             </plugin>
+            <plugin>
+                <groupId>org.pitest</groupId>
+                <artifactId>pitest-maven</artifactId>
+                <version>1.17.1</version>
+            </plugin>
         </plugins>
     </build>
 </project>
